--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: font;
+  src: url("../src/components/fonts/static/EBGaramond-Regular.ttf");
+}
+
 * {
  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
